--- a/index.html
+++ b/index.html
@@ -23,10 +23,18 @@
 </head>
 
 <body class="bg-light">
-    <nav class="container-fluid sticky-top bg-danger shadow-lg">
+    <nav class="container-fluid top-fixed bg-danger shadow-lg">
         <div class="row">
-            <div class="col text-center py-3">
+
+            <div class="col-4 text-start my-auto px-3">
+                <i class="fa-arrow-left fa-solid fa-2x text-danger"></i>
+            </div>
+            <div class="col-4 text-center my-auto">
                 <i class="fa-solid fa-seedling fa-2x"></i>
+            </div>
+
+            <div class="col-4 text-end my-auto py-3">
+                <button class="btn btn-outline-dark rounded">ESP <i class="fa-solid fa-earth-americas"></i></button>
             </div>
         </div>
     </nav>
@@ -51,7 +59,7 @@
             </div>
         </div>
     
-        <div class="container border-top border-1 border-dark my-3" style="height: 40vh;">
+        <div class="container border-top border-3 border-danger my-3" style="height: 40vh;">
             <div class="row py-4">
                 <div class="col text-center">
                     <h2 class="h2 fw-bold header">WHY LEAF SURVEY ?</h2>
