Termine formulario, datos persitentes, validacion de datos

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
             <div class="col-4 text-start my-auto px-3">
                 <i class="fa-arrow-left fa-solid fa-2x text-danger"></i>
             </div>
-            <div class="col-4 text-center my-auto">
+            <div class="col-4 text-center my-auto py-3">
                 <i class="fa-solid fa-seedling fa-2x"></i>
             </div>
 
-            <div class="col-4 text-end my-auto py-3">
-                <button class="btn btn-outline-dark rounded">ESP <i class="fa-solid fa-earth-americas"></i></button>
+            <div class="col-4 text-end my-auto py-3 visually-hidden">
+                <!-- <button class="btn btn-outline-dark rounded ">ESP <i class="fa-solid fa-earth-americas"></i></button> -->
             </div>
         </div>
     </nav>
@@ -116,5 +116,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
     integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
     crossorigin="anonymous"></script>
+
 
 </html>
